# Tarea2-SSOO

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  mainParalelo.cpp  mainSecuencial.cpp
